tests/ui/extra_member1.stderr
error: extraneous member `potato`
 --> $DIR/extra_member1.rs:6:5
  |
6 |     potato = "potato"
  |     ^^^^^^^^^^^^^^^^^
